KUDU-2952: fix TOCTOU race in reporting stats

It was possible for the following race to occur:

During CreateReportedTabletPB() as a follower:
1. T1 Get consensus state.
2. T1 Serialize the ConsensusStatePB under lock -- we are not the
   leader.
3. T2 Become the leader.
4. T1 Check if we're leader so that we can generate stats. This check
      succeeds.
5. T1 Populate the stats.
6. Our tablet report now contains stats even though the consensus state
   says we aren't the leader.
7. F0924 00:08:46.821594  9670 catalog_manager.cc:4239] Check failed: ts_desc->permanent_uuid() == report.consensus_state().leader_uuid()

This addresses this by checking leadership from the serialized consensus
state and adds a test that would fail pretty consistently without this
patch.

Change-Id: I29fe63cb42c82a08a4811d42b244abeb2fa86bd9
Reviewed-on: http://gerrit.cloudera.org:8080/14287
Reviewed-by: Adar Dembo <adar@cloudera.com>
Reviewed-by: Alexey Serbin <aserbin@cloudera.com>
Tested-by: Kudu Jenkins